# sage_std

./: .gitignore  CMakeLists.txt  __minor.c
include/sage_log/: sage_log.h
include/sstd/: serr_check.h  slog.h  sstd.h
src/: sage_log.c
tests/: test_err_check.c
